--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -18,6 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
             android:elevation="10dp"
+            app:cardBackgroundColor="#FFA500"
             app:cardCornerRadius="10dp"
             app:cardElevation="10dp"
             tools:targetApi="lollipop">
@@ -32,9 +33,9 @@
                     android:layout_height="wrap_content">
 
                     <TextView
-                        android:id="@+id/homeTotalAmount"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
+                        android:textColor="@android:color/white"
                         android:layout_marginTop="15dp"
                         android:layout_marginBottom="15dp"
                         android:paddingLeft="15dp"
@@ -50,10 +51,12 @@
 
                     <TextView
                         android:layout_width="match_parent"
+                        android:id="@+id/homeTotalAmount"
                         android:layout_height="40dp"
                         android:layout_marginTop="15dp"
                         android:paddingLeft="10dp"
                         android:paddingRight="10dp"
+                        android:textColor="@android:color/black"
                         android:text="0000"
                         android:textSize="24sp" />
                 </RelativeLayout>
@@ -66,8 +69,8 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/homeRecyclerView"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-
             android:layout_width="match_parent"
+            android:textColor="@android:color/white"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp" />
 
@@ -83,17 +86,7 @@
             android:src="@drawable/ic_fab_icon"
              />
 
-<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end|bottom"
-            android:layout_margin="16dp"
-            android:onClick="addShopping"
-            android:clickable="true"
-            android:src="@drawable/ic_fab_icon"
-            app:backgroundTint="#D81B60"
-            />-->
+
     </LinearLayout>
 
 
