--- a/app/src/main/res/layout/shoppingitems.xml
+++ b/app/src/main/res/layout/shoppingitems.xml
@@ -1,6 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@android:color/holo_orange_dark">
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cvShopppingItems"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:elevation="5dp"
+        app:cardCornerRadius="5dp"
+        android:background="@android:color/white"
+        app:cardElevation="5dp">
+
+
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+        <RelativeLayout
+            android:layout_width="300px"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/tvdbDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="7dp"
+                android:text="03 May, 2020" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="250px"
+            android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/tvdbType"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:layout_margin="7dp"
+            android:text="Type" />
+
+            <TextView
+                android:id="@+id/tvdbNote"
+                android:layout_below="@+id/tvdbType"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:layout_margin="7dp"
+                android:text="Note" />
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/tvdbAmount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:layout_margin="5dp"
+                android:text="Kes 500" />
+        </RelativeLayout>
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
